--- a/themes/benadam/templates/home.html
+++ b/themes/benadam/templates/home.html
@@ -3,11 +3,16 @@
 {% block body_class %}hidden fade-in{% endblock %}
 
 {% block content %}
+<div class="column" style="margin-top: 2rem;margin-bottom:2rem;">
+    <div class="column col-xs-12 col-8 centered">
+        <h1 class="text-right">{{page.title}}</h1>
+    </div>
+</div>
 <div class="columns">
     <div class="column hero">
-        <div class="inner-container col-xs-12 col-8 centered">
+        <!-- <div class="inner-container col-xs-12 col-8 centered">
             <h1>{{page.title}}</h1>
-        </div>
+        </div> -->
     </div>
 </div>
 <div class="columns">
