--- a/themes/benadam/templates/home.html
+++ b/themes/benadam/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="column" style="margin-top: 2rem;margin-bottom:2rem;">
-    <div class="column col-xs-12 col-8 centered">
+    <div class="column col-xs-12 col-md-10 col-8 centered">
         <h1 class="text-right">{{page.title}}</h1>
     </div>
 </div>
@@ -16,7 +16,7 @@
     </div>
 </div>
 <div class="columns">
-    <div class="column col-xs-12 col-8 centered">
+    <div class="column col-xs-12 col-md-10 col-8 centered">
         <div class="inner-container">
             {{page.content}}
         </div>
