--- a/themes/benadam/templates/page.html
+++ b/themes/benadam/templates/page.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="columns">
-	<div class="column col-xs-12 col-8 centered">
+	<div class="column col-xs-12 col-md-10 col-8 centered">
 		<h1>{{ page.title }}</h1>
 		{% import 'translations.html' as translations with context %}
 		{{ translations.translations_for(page) }}
