--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -28,6 +28,10 @@ img {
     background-color: #F0EEEE;
 }
 
+p {
+    font-size: 1rem;
+}
+
 
 /* HEADER */
 
@@ -89,10 +93,17 @@ img {
 .navbar .btn {
     color: #2d71bd;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1rem;
 }
 
+.navbar .btn {
+    margin-left: 10px;
+}
 
 /* CONTENT */
+.container {
+    padding-bottom: 2rem; 
+}
 
 .inner-container,
 .outer-container {
@@ -127,4 +138,34 @@ img {
 
 .hero .inner-container {
     color: #F0EEEE;
+}
+
+.footer {
+    background-color: #2d71bd;
+    color: #F0EEEE;
+    padding: 2rem 0;
+}
+
+.footer .btn-primary {
+    font-size: 1rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #ffffff !important;
+    color: #2d71bd;
+}
+
+.footer .text-me-btn svg {
+    transition: all 150ms;
+}
+
+.footer .text-me-path {
+    fill: #2d71bd;
+}
+
+.btn.btn-link.active, .btn.btn-link:active, .btn.btn-link:focus, .btn.btn-link:hover {
+    color: #2d71bd;
+}
+
+.btn.btn-primary:focus, .btn.btn-primary:hover {
+    background: #2d71bd;
+    border-color: #2d71bd;
 }
