--- a/themes/benadam/static/css/style.css
+++ b/themes/benadam/static/css/style.css
@@ -151,10 +151,11 @@ p {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #ffffff !important;
     color: #2d71bd;
+    transition: all 100ms;
 }
 
 .footer .text-me-btn svg {
-    transition: all 150ms;
+    width: 1rem;
 }
 
 .footer .text-me-path {
