--- a/themes/benadam/templates/home.html
+++ b/themes/benadam/templates/home.html
@@ -3,7 +3,7 @@
 {% block body_class %}hidden fade-in{% endblock %}
 
 {% block content %}
-<div class="column" style="margin-top: 2rem;margin-bottom:2rem;">
+<div class="columns" style="margin-top: 2rem;margin-bottom:2rem;">
     <div class="column col-xs-12 col-md-10 col-8 centered">
         <h1 class="text-right">{{page.title}}</h1>
     </div>
