--- a/themes/benadam/templates/base.html
+++ b/themes/benadam/templates/base.html
@@ -38,7 +38,7 @@
 <body id="index" class="{% block body_class %}{% endblock %}">
   <div class="container">
     <div class="columns">
-      <div class="column col-8 col-xs-12 my-2 centered">
+      <div class="column col-8 col-xs-12 col-md-10 my-2 centered">
         <header class="navbar">
           <section class="navbar-section">
             <a href="{{ SITEURL }}/" class="navbar-brand mr-2">
