--- a/themes/benadam/templates/page.html
+++ b/themes/benadam/templates/page.html
@@ -2,9 +2,13 @@
 {% block title %}{{ page.title }}{%endblock%}
 
 {% block content %}
+<div class="columns" style="margin-top:2rem;margin-bottom:2rem;">
+	<div class="column col-xs-12 col-md-10 col-8 centered">
+		<h1>{{page.title}}</h1>
+	</div>
+</div>
 <div class="columns">
 	<div class="column col-xs-12 col-md-10 col-8 centered">
-		<h1>{{ page.title }}</h1>
 		{% import 'translations.html' as translations with context %}
 		{{ translations.translations_for(page) }}
 
