Generate Pelican site

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -103,7 +103,7 @@ p {
 .navbar-brand span,
 .navbar .btn {
     color: #2d71bd;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Rubik', 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1rem;
 }
 
